Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101456

QTabBar::setTabTextColor does not change color when QPalette::Base background role is used

    XMLWordPrintable

Details

    • 4ac00ca901 (qt/qtbase/dev) 4ac00ca901 (qt/tqtc-qtbase/dev) 7a5ca30587 (qt/qtbase/6.2) 231a4d5282 (qt/qtbase/6.3) 7a5ca30587 (qt/tqtc-qtbase/6.2) 231a4d5282 (qt/tqtc-qtbase/6.3)

    Description

      QTabBar::setTabTextColor does not change color of the text in the tab if QPalette::Base background role is used even if valid color is specified.

      Documentation says the following (https://doc.qt.io/qt-6/qtabbar.html#setTabTextColor):
      "Sets the color of the text in the tab with the given index to the specified color.
      If an invalid color is specified, the tab will use the QTabBar foreground role instead."

      According to documentation, the color of the text of the tab should change as there are no limitations mentioned regarding the background role. Even if QPalette::Base would be wrong role to be used for QTabWidget, this limitation should be mentioned in the documentation or then there is a bug.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vhilshei Volker Hilsheimer
            foxxx Tuukka Kettunen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes